--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,14 @@
 .reveal {
-font-size: 180%;
+font-size:180%;
+overflow-x:visible;
+overflow-y:visible;
+}
+.output_latex {
+overflow-x:visible;
+overflow-y:visible;
+}
+.output_wrapper {
+font-size:150%;
+overflow-x:visible;
+overflow-y:visible;
 }
